# Sedentary-Tracker

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
db/: Cargo.toml
db/src/: lib.rs
db/tests/: integration_test.rs
errors/src/: lib.rs  tests.rs
errors/tests/: integration_test.rs
frontend/: app.js  index.html  styles.css
logic/: Cargo.toml
logic/src/: lib.rs  tests.rs
logic/tests/: integration_test.rs
migrations/: 20260101165438_create_observations.sql
ml_classification/: model_classification.py
scripts/: init_db.sh
server/: Cargo.toml
server/src/: db_worker.rs  fhir.rs  fhir_tests.rs  main.rs  models.rs  models_tests.rs  serial.rs  state.rs  websocket.rs
