[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls", 
    "macros",               
    "postgres",             
    "uuid",                 
    "chrono",               
    "migrate",              
    "json"
] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing for observability
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }