[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
redis = { version = "0.24", features = ["tokio-comp"] }


sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
db = { path = "../db" }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
serialport = "4.2"
futures = "0.3"
chrono = "0.4"
